<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:theme="@style/AppTheme.AppWidgetContainer" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/Widget.Locket.AppWidget.Container"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/locket_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:adjustViewBounds="true" android:cropToPadding="true" android:layout_centerInParent="true" android:contentDescription="@string/app_widget_description" app:srcCompat="@drawable/ic_widget_preview_static" />
    <FrameLayout android:id="@id/locket_frame_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/locket_image_view" android:layout_alignBottom="@id/locket_image_view" android:layout_alignStart="@id/locket_image_view" android:layout_alignEnd="@id/locket_image_view">
        <ImageView android:id="@id/locket_remote_frame" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:contentDescription="@string/frame_img" />
        <ImageView android:id="@id/locket_frame" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:contentDescription="@string/frame_img" />
    </FrameLayout>
    <FrameLayout android:id="@id/locket_profile_view" android:background="@drawable/bg_circle_border" android:layout_width="32.0dp" android:layout_height="32.0dp" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" android:layout_alignBottom="@id/locket_image_view" android:layout_marginStart="8.0dp" android:layout_alignStart="@id/locket_image_view">
        <ImageView android:id="@id/locket_profile_placeholder_bg" android:background="@drawable/bg_profile_placeholder" android:visibility="gone" android:layout_width="32.0dp" android:layout_height="32.0dp" />
        <ImageView android:id="@id/locket_profile_image_view" android:layout_width="32.0dp" android:layout_height="32.0dp" android:scaleType="centerInside" android:cropToPadding="true" android:contentDescription="@string/app_widget_description" />
        <ImageView android:id="@id/locket_profile_image_border" android:background="@drawable/bg_circle_border" android:visibility="gone" android:layout_width="32.0dp" android:layout_height="32.0dp" />
    </FrameLayout>
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" android:layout_alignBottom="@id/locket_image_view" android:layout_marginStart="6.0dp" android:layout_marginEnd="8.0dp" android:layout_toEndOf="@id/locket_profile_view" android:layout_alignEnd="@id/locket_image_view">
        <ImageView android:id="@id/locket_overlay_gradient_bg_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
        <ImageView android:id="@id/locket_overlay_text_view" android:background="@drawable/bg_overlay_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
        <FrameLayout android:id="@id/locket_review_caption_view" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <include layout="@layout/widget_review_caption_sm" />
            <include layout="@layout/widget_review_caption_md" />
            <include layout="@layout/widget_review_caption_lg" />
        </FrameLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/locket_location_caption_view" android:background="@drawable/bg_overlay_caption_regular" android:paddingTop="7.0dp" android:paddingBottom="7.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingHorizontal="7.0dp">
            <ImageView android:layout_width="18.0dp" android:layout_height="18.0dp" android:src="@drawable/ic_location_marker" android:tint="#b3ffffff" android:contentDescription="@null" />
            <ImageView android:id="@id/locket_location_caption_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@null" android:layout_marginStart="4.0dp" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/locket_weather_caption_view" android:paddingTop="4.0dp" android:paddingBottom="5.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="32.0dp" android:paddingHorizontal="7.0dp">
            <ImageView android:id="@id/locket_weather_caption_icon" android:layout_width="18.0dp" android:layout_height="18.0dp" android:contentDescription="@null" />
            <ImageView android:id="@id/locket_weather_caption_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@null" android:layout_marginStart="4.0dp" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/locket_music_caption_view" android:paddingTop="4.0dp" android:paddingBottom="5.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="32.0dp" android:paddingHorizontal="7.0dp">
            <ImageView android:id="@id/locket_music_caption_icon" android:layout_width="18.0dp" android:layout_height="18.0dp" android:scaleType="centerInside" android:contentDescription="@null" />
            <ImageView android:id="@id/locket_music_caption_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@null" android:layout_marginStart="4.0dp" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/locket_link_caption_view" android:paddingTop="4.0dp" android:paddingBottom="5.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="32.0dp" android:paddingHorizontal="7.0dp">
            <ImageView android:id="@id/locket_link_caption_icon" android:layout_width="22.0dp" android:layout_height="12.0dp" android:scaleType="centerInside" android:contentDescription="@null" />
            <ImageView android:id="@id/locket_link_caption_text" android:layout_width="wrap_content" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@null" android:layout_marginStart="4.0dp" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/locket_streak_caption_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/widget_profile_photo_size" android:paddingHorizontal="7.0dp">
            <ImageView android:id="@id/locket_streak_caption_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:contentDescription="@null" />
            <ImageView android:id="@id/locket_streak_caption_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" android:contentDescription="@null" android:layout_marginStart="3.0dp" />
        </LinearLayout>
        <ImageView android:id="@id/locket_caption_view" android:background="@drawable/bg_rounded" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" />
    </FrameLayout>
    <ImageView android:id="@id/locket_remote_frame_above" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:layout_alignTop="@id/locket_image_view" android:layout_alignBottom="@id/locket_image_view" android:contentDescription="@string/frame_img" android:layout_alignStart="@id/locket_image_view" android:layout_alignEnd="@id/locket_image_view" />
    <ImageView android:id="@id/locket_missed_moments_badge" android:background="@drawable/bg_badge" android:paddingBottom="2.0dp" android:visibility="gone" android:layout_width="28.0dp" android:layout_height="28.0dp" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" android:scaleType="center" android:layout_alignTop="@id/locket_image_view" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" android:layout_alignEnd="@id/locket_image_view" />
    <ImageView android:id="@id/locket_missed_moments_badge_max" android:background="@drawable/bg_badge" android:paddingBottom="2.0dp" android:visibility="gone" android:layout_width="38.0dp" android:layout_height="28.0dp" android:layout_marginTop="8.0dp" android:layout_marginBottom="8.0dp" android:scaleType="center" android:layout_alignTop="@id/locket_image_view" android:layout_marginStart="8.0dp" android:layout_marginEnd="8.0dp" android:layout_alignEnd="@id/locket_image_view" />
    <FrameLayout android:gravity="center" android:id="@id/locket_streak_frame" android:background="@drawable/bg_streak_two_digits" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="28.0dp" android:layout_marginTop="8.0dp" android:layout_alignTop="@id/locket_image_view" android:layout_marginStart="8.0dp" android:layout_alignStart="@id/locket_image_view" android:elevation="12.0dp">
        <LinearLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:translationY="-0.25dp" android:paddingHorizontal="9.0dp" android:paddingVertical="1.25dp">
            <ImageView android:id="@id/locket_streak_icon" android:layout_width="10.0dp" android:layout_height="match_parent" android:src="@drawable/ic_streak" android:contentDescription="@string/streak_img_des" android:translationY="0.6dp" />
            <ImageView android:id="@id/locket_streak_text" android:paddingLeft="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/streak_txt" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
